<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="337dp"
        android:layout_height="217dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/beat_logo"
        app:layout_constraintBottom_toTopOf="@+id/usernameLoginEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_bg_inverted"
        android:ems="10"
        android:hint="@string/loginUsernameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordLoginEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext_bg_inverted"
        android:ems="10"
        android:hint="@string/loginPasswordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/usernameLoginEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameLoginEditText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="154dp"
        android:onClick="goToRetrieveHeartRate"
        android:text="@string/loginButtonText"
        android:background="@drawable/button_bg_inverted"
        android:textColor="#398AFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>